[package]
name = "milli_fuzz"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
milli = { git = "https://github.com/meilisearch/milli", rev = "ee3a49cfba760ed2e89eb56887205c62f4217ebe" }
heed = { git = "https://github.com/Kerollmops/heed", tag = "v0.12.1" }
afl = { version = "0.10.1", features = ["reset_lazy_static"] }

[patch.crates-io]
lazy_static = { git = "https://github.com/rust-fuzz/resettable-lazy-static.rs" }

